Add tagging functionality with acts-as-tagable-on

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -21,6 +21,8 @@
       <%= f.cktext_area :content, class: "form-control", id: "content"%>
     </div>
 
+    <%= f.text_field :tag_list %>
+
     <%= f.submit class: "btn btn-success" %>
 
 
