--- a/app/views/shared/_post_header.html.erb
+++ b/app/views/shared/_post_header.html.erb
@@ -2,3 +2,5 @@
 <div class="author">by <%= post.user.first_name + " " + post.user.last_name %></div>
 <div class="date"><%= post.created_at.strftime('%B %e at %l:%M %p') %></div>
 <%= render partial: 'shared/social_buttons', locals: { title: post.title, url: request.original_url } %>
+
+<div><%= render post.tags %></div>
