Style the tags index page and display posts for each tag

--- a/app/views/shared/_post_header.html.erb
+++ b/app/views/shared/_post_header.html.erb
@@ -3,4 +3,4 @@
 <div class="date"><%= post.created_at.strftime('%B %e at %l:%M %p') %></div>
 <%= render partial: 'shared/social_buttons', locals: { title: post.title, url: request.original_url } %>
 
-<div><%= render post.tags %></div>
+<div class="tags"><%= render post.tags %></div>
